# business-rule-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
business_rule_engine/: __init__.py  exceptions.py  parser.py  results.py  rule.py
tests/: conftest.py  test_rules.py  test_speed.py
tests/rules/: description.rule  inline_boolean.rule  multi_action.rule  multi_condition.rule  order_items.rule  priority.rule  priority_own_line.rule  stop_on_trigger.rule
