[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "business-rule-engine"
dynamic = ["version"]
authors = [
    {name = "Manfred Kaiser", email = "manfred.kaiser@ssh-mitm.at"}
]
description = "Python DSL for setting up business intelligence rules"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["business", "rules", "engine"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">= 3.11"
dependencies = [
    "simpleeval>=1.0",
]

[project.urls]
Homepage = "https://github.com/manfred-kaiser/business-rule-engine"
Source = "https://github.com/manfred-kaiser/business-rule-engine"
Tracker = "https://github.com/manfred-kaiser/business-rule-engine/issues"

[tool.hatch.version]
path = "business_rule_engine/__init__.py"

[tool.hatch.build]
include = [
    "business_rule_engine/**/*.py",
    "business_rule_engine/py.typed",
]

[tool.hatch.envs.lint]
detached = false
dependencies = [
    "Flake8-pyproject",
    "flake8",
    "mypy",
    "pytest",
    "ruff",
]

[tool.hatch.envs.lint.scripts]
check = [
    "pytest",
    "ruff check business_rule_engine",
    "flake8 business_rule_engine",
    "mypy business_rule_engine",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 127

[tool.mypy]
strict = true
install_types = true
non_interactive = true

[[tool.mypy.overrides]]
module = "simpleeval"
ignore_missing_imports = true

[tool.bumpversion]
commit = false
tag = false
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "business_rule_engine/__init__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "[Unreleased]: https://github.com/manfred-kaiser/business-rule-engine/compare/{current_version}...master"
replace = "[Unreleased]: https://github.com/manfred-kaiser/business-rule-engine/compare/{new_version}...master\n[{new_version}]: https://github.com/manfred-kaiser/business-rule-engine/compare/{current_version}...{new_version}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PLR0913",
]
